manifests/network/cilium/overlays/cloud/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls
  annotations:
    external-dns.alpha.kubernetes.io/target: 'onode1.ucdialplans.com'
