manifests/network/cilium/overlays/cloud/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
  - "cloud-hubble.ucdialplans.com"
